--- a/contact.html
+++ b/contact.html
@@ -289,7 +289,7 @@ footer{
     <nav class="primary">
       <a href="index.html">HOME</a>
       <a href="service.html">SERVICES</a>
-      <a href="contact.html">HELP</a>
+      <a href="help.html">HELP</a>
     </nav>
 
     <div class="menu-btn" id="menuBtn">
@@ -303,7 +303,7 @@ footer{
 <div class="mobile-dropdown" id="mobileDropdown">
   <a href="index.html">HOME</a>
   <a href="service.html">SERVICES</a>
-  <a href="contact.html">HELP</a>
+  <a href="help.html">HELP</a>
 </div>
 
 <!-- CONTACT SECTION -->
