--- a/help.html
+++ b/help.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+<head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>StudioVyne — Help</title>
@@ -23,6 +24,7 @@ html,body{height:100%;scroll-behavior:smooth}
 html{
   overflow-x:hidden;
   max-width:100%;
+  -webkit-text-size-adjust:100%;
 }
 
 /* FULL PAGE BACKGROUND */
@@ -44,11 +46,20 @@ body{
 @media (max-width:780px){
   body{
     background-image:url("https://images.unsplash.com/photo-1668624384628-38c90f9e5783?q=80&w=654&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-attachment:scroll;
   }
 }
 
 /* NAV (wrap is relative so dropdown can position under nav) */
-.nav-wrap{position:fixed;top:18px;left:0;right:0;display:flex;justify-content:center;z-index:1200}
+.nav-wrap{
+  position:fixed;
+  top:18px;
+  left:0;
+  right:0;
+  display:flex;
+  justify-content:center;
+  z-index:1200;
+}
 .nav{
   width:94%;
   max-width:var(--max);
@@ -61,7 +72,7 @@ body{
   padding:10px 26px;
   border-radius:16px;
   box-shadow:0 20px 60px rgba(0,0,0,0.75);
-  position:relative
+  position:relative;
 }
 .brand-wrap{display:flex;align-items:center;gap:12px}
 .brand-logo{width:48px;height:48px;border-radius:50%;object-fit:cover}
@@ -71,7 +82,7 @@ body{
   background:var(--accent);
   -webkit-background-clip:text;
   -webkit-text-fill-color:transparent;
-  font-size:1.1rem
+  font-size:1.1rem;
 }
 
 /* Desktop nav links */
@@ -82,7 +93,8 @@ nav.primary a{
   color:white;
   text-decoration:none;
   position:relative;
-  padding:4px
+  padding:4px;
+  transition:transform .2s ease;
 }
 nav.primary a:hover{transform:translateY(-2px)}
 nav.primary a::after{
@@ -94,7 +106,7 @@ nav.primary a::after{
   width:0;
   border-radius:4px;
   background:linear-gradient(90deg,#ff66c1,#ffd18c);
-  transition:width .3s
+  transition:width .3s;
 }
 nav.primary a:hover::after{width:100%}
 
@@ -105,14 +117,14 @@ nav.primary a:hover::after{width:100%}
   display:none;
   flex-direction:column;
   justify-content:space-between;
-  cursor:pointer
+  cursor:pointer;
 }
 .menu-line{
   height:3px;
   width:100%;
   background:white;
   border-radius:6px;
-  transition:transform .28s cubic-bezier(.22,.9,.28,1)
+  transition:transform .28s cubic-bezier(.22,.9,.28,1);
 }
 .menu-btn.active .menu-line:nth-child(1){transform:translateY(6px) rotate(45deg)}
 .menu-btn.active .menu-line:nth-child(2){transform:translateY(-6px) rotate(-45deg)}
@@ -120,29 +132,34 @@ nav.primary a:hover::after{width:100%}
 /* Simple dropdown under nav (hidden by default) */
 .nav-dropdown{
   position:absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  top: calc(var(--nav-h) + 12px);
-  width: calc(100% - 56px);
-  max-width: 960px;
-  background: linear-gradient(180deg, rgba(0,0,0,0.85), rgba(0,0,0,0.8));
-  border-radius: 14px;
-  padding: 18px 22px;
-  box-shadow: 0 30px 80px rgba(0,0,0,0.85);
-  border: 1px solid rgba(255,255,255,0.12);
-  display: none;
-  z-index: 1300;
-  backdrop-filter: blur(10px);
+  left:50%;
+  transform:translateX(-50%);
+  top:calc(var(--nav-h) + 12px);
+  width:calc(100% - 56px);
+  max-width:960px;
+  background:linear-gradient(180deg,rgba(0,0,0,0.85),rgba(0,0,0,0.8));
+  border-radius:14px;
+  padding:18px 22px;
+  box-shadow:0 30px 80px rgba(0,0,0,0.85);
+  border:1px solid rgba(255,255,255,0.12);
+  display:none;
+  z-index:1300;
+  backdrop-filter:blur(10px);
   text-align:center;
 }
-.nav-dropdown .nav-links{display:flex;flex-direction:column;gap:14px;align-items:center}
+.nav-dropdown .nav-links{
+  display:flex;
+  flex-direction:column;
+  gap:14px;
+  align-items:center;
+}
 .nav-dropdown .nav-links a{
   font-family:'Space Grotesk';
   font-weight:800;
   color:white;
   text-decoration:none;
   font-size:1.05rem;
-  letter-spacing:1px
+  letter-spacing:1px;
 }
 
 /* MAIN */
@@ -187,7 +204,7 @@ main{padding-top:calc(var(--nav-h) + 40px)}
   -webkit-text-fill-color:transparent;
   margin-bottom:10px;
   opacity:0;
-  transform:translateY(30px)
+  transform:translateY(30px);
 }
 .desc{
   max-width:760px;
@@ -195,7 +212,7 @@ main{padding-top:calc(var(--nav-h) + 40px)}
   font-size:1.05rem;
   line-height:1.75;
   opacity:0;
-  transform:translateY(20px)
+  transform:translateY(20px);
 }
 
 /* CARDS (desktop grid) */
@@ -207,8 +224,8 @@ main{padding-top:calc(var(--nav-h) + 40px)}
 
 /* UPDATED GLASSY BLACK CARDS */
 .card{
-  background: rgba(0,0,0,0.45);
-  backdrop-filter: blur(12px);
+  background:rgba(0,0,0,0.45);
+  backdrop-filter:blur(12px);
   border-radius:18px;
   overflow:hidden;
   border:1px solid rgba(255,255,255,0.14);
@@ -224,15 +241,15 @@ main{padding-top:calc(var(--nav-h) + 40px)}
   display:flex;
   align-items:center;
   justify-content:center;
-  background: rgba(0,0,0,0.55);
-  overflow:hidden
+  background:rgba(0,0,0,0.55);
+  overflow:hidden;
 }
 
 .media img{
   width:100%;
   height:100%;
   object-fit:cover;
-  transition:transform 1s ease
+  transition:transform 1s ease;
 }
 .card:hover .media img{transform:scale(1.06)}
 
@@ -244,7 +261,7 @@ main{padding-top:calc(var(--nav-h) + 40px)}
   background:var(--accent);
   -webkit-background-clip:text;
   -webkit-text-fill-color:transparent;
-  margin-bottom:10px
+  margin-bottom:10px;
 }
 .kicker{
   font-size:.98rem;
@@ -295,7 +312,7 @@ main{padding-top:calc(var(--nav-h) + 40px)}
     height:220px;
     aspect-ratio:auto;
     padding:0;
-    background: rgba(0,0,0,0.55);
+    background:rgba(0,0,0,0.55);
   }
 
   .media img{
@@ -313,7 +330,7 @@ main{padding-top:calc(var(--nav-h) + 40px)}
     width:calc(100% - 40px);
     left:50%;
     transform:translateX(-50%);
-    top:calc(var(--nav-h) + 12px)
+    top:calc(var(--nav-h) + 12px);
   }
 }
 
@@ -323,13 +340,42 @@ main{padding-top:calc(var(--nav-h) + 40px)}
   max-width:var(--max);
   margin:60px auto;
   background:linear-gradient(90deg,#0000,#ff66c1 20%,#ffd18c 80%,#0000);
-  opacity:.14
+  opacity:.14;
 }
 footer{
   padding:40px 20px;
   text-align:center;
   color:rgba(255,255,255,0.9);
   text-shadow:0 0 8px rgba(0,0,0,0.65);
+}
+
+/* --- MOBILE FIX FOR GRADIENT TEXT NOT SHOWING --- */
+@media (max-width:780px){
+
+  /* make sure all key text is visible immediately */
+  .hero h1,
+  .hero p,
+  .title,
+  .desc,
+  .title-sub{
+    opacity:1 !important;
+    transform:none !important;
+  }
+
+  /* ensure gradient clip renders on iOS */
+  .hero h1,
+  .title,
+  .title-sub{
+    -webkit-text-fill-color:transparent !important;
+    -webkit-background-clip:text !important;
+    background-clip:text !important;
+  }
+
+  /* help Safari with heavy filters */
+  body{
+    -webkit-backface-visibility:hidden;
+    backface-visibility:hidden;
+  }
 }
 </style>
 </head>
@@ -382,7 +428,9 @@ footer{
 
   <div class="cards">
     <article class="card">
-      <div class="media"><img src="https://plus.unsplash.com/premium_photo-1757553358799-900b78f19844?auto=format&fit=crop&w=1740&q=80" alt="Discovery & Research"></div>
+      <div class="media">
+        <img loading="lazy" src="https://plus.unsplash.com/premium_photo-1757553358799-900b78f19844?auto=format&fit=crop&w=1740&q=80" alt="Discovery & Research">
+      </div>
       <div class="body">
         <div class="title-sub">Discovery & Research</div>
         <div class="kicker">
@@ -392,7 +440,9 @@ footer{
     </article>
 
     <article class="card">
-      <div class="media"><img src="https://images.unsplash.com/photo-1758873272414-c0bf30332738?auto=format&fit=crop&w=2064&q=80" alt="Creative Strategy"></div>
+      <div class="media">
+        <img loading="lazy" src="https://images.unsplash.com/photo-1758873272414-c0bf30332738?auto=format&fit=crop&w=2064&q=80" alt="Creative Strategy">
+      </div>
       <div class="body">
         <div class="title-sub">Creative Strategy</div>
         <div class="kicker">
@@ -402,7 +452,9 @@ footer{
     </article>
 
     <article class="card">
-      <div class="media"><img src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?auto=format&fit=crop&w=1400&q=80" alt="Execution Excellence"></div>
+      <div class="media">
+        <img loading="lazy" src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?auto=format&fit=crop&w=1400&q=80" alt="Execution Excellence">
+      </div>
       <div class="body">
         <div class="title-sub">Execution Excellence</div>
         <div class="kicker">
@@ -422,7 +474,9 @@ footer{
 
   <div class="cards">
     <article class="card">
-      <div class="media"><img src="https://images.unsplash.com/photo-1542744094-24638eff58bb?auto=format&fit=crop&w=1400&q=80" alt="Brand Identity"></div>
+      <div class="media">
+        <img loading="lazy" src="https://images.unsplash.com/photo-1542744094-24638eff58bb?auto=format&fit=crop&w=1400&q=80" alt="Brand Identity">
+      </div>
       <div class="body">
         <div class="title-sub">Brand Identity</div>
         <div class="kicker">
@@ -432,7 +486,9 @@ footer{
     </article>
 
     <article class="card">
-      <div class="media"><img src="https://plus.unsplash.com/premium_photo-1663091696773-ae012087b421?auto=format&fit=crop&w=1740&q=80" alt="Digital Experience"></div>
+      <div class="media">
+        <img loading="lazy" src="https://plus.unsplash.com/premium_photo-1663091696773-ae012087b421?auto=format&fit=crop&w=1740&q=80" alt="Digital Experience">
+      </div>
       <div class="body">
         <div class="title-sub">Digital Experience</div>
         <div class="kicker">
@@ -442,7 +498,9 @@ footer{
     </article>
 
     <article class="card">
-      <div class="media"><img src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?auto=format&fit=crop&w=1400&q=80" alt="Visual Design"></div>
+      <div class="media">
+        <img loading="lazy" src="https://images.unsplash.com/photo-1515378791036-0648a3ef77b2?auto=format&fit=crop&w=1400&q=80" alt="Visual Design">
+      </div>
       <div class="body">
         <div class="title-sub">Visual Design</div>
         <div class="kicker">
@@ -452,7 +510,9 @@ footer{
     </article>
 
     <article class="card">
-      <div class="media"><img src="https://plus.unsplash.com/premium_photo-1723489254801-ebec5f249c05?auto=format&fit=crop&w=1160&q=80" alt="Motion & Storytelling"></div>
+      <div class="media">
+        <img loading="lazy" src="https://plus.unsplash.com/premium_photo-1723489254801-ebec5f249c05?auto=format&fit=crop&w=1160&q=80" alt="Motion & Storytelling">
+      </div>
       <div class="body">
         <div class="title-sub">Motion & Storytelling</div>
         <div class="kicker">
@@ -472,7 +532,9 @@ footer{
 
   <div class="cards">
     <article class="card">
-      <div class="media"><img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?auto=format&fit=crop&w=1400&q=80" alt="Engagement"></div>
+      <div class="media">
+        <img loading="lazy" src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?auto=format&fit=crop&w=1400&q=80" alt="Engagement">
+      </div>
       <div class="body">
         <div class="title-sub">Engagement</div>
         <div class="kicker">
@@ -482,7 +544,9 @@ footer{
     </article>
 
     <article class="card">
-      <div class="media"><img src="https://images.unsplash.com/photo-1706193589333-da530df63ecf?auto=format&fit=crop&w=1740&q=80" alt="Recognition"></div>
+      <div class="media">
+        <img loading="lazy" src="https://images.unsplash.com/photo-1706193589333-da530df63ecf?auto=format&fit=crop&w=1740&q=80" alt="Recognition">
+      </div>
       <div class="body">
         <div class="title-sub">Recognition</div>
         <div class="kicker">
@@ -492,11 +556,13 @@ footer{
     </article>
 
     <article class="card">
-      <div class="media"><img src="https://plus.unsplash.com/premium_photo-1693166985133-8a849aa237de?auto=format&fit=crop&w=2064&q=80" alt="Emotional Impact"></div>
+      <div class="media">
+        <img loading="lazy" src="https://plus.unsplash.com/premium_photo-1693166985133-8a849aa237de?auto=format&fit=crop&w=2064&q=80" alt="Emotional Impact">
+      </div>
       <div class="body">
         <div class="title-sub">Emotional Impact</div>
         <div class="kicker">
-          Good design isn’t just clear — it’s felt. We focus on the small emotional beats: how a headline lands, how a scroll sequence reveals work, how motion reinforces the mood of your brand.
+          Good design isn’t just clear — it’s felt. We focus on the small emotional beats: how a headline lands, how a scroll sequence reveals work, and how motion reinforces the mood of your brand.
         </div>
       </div>
     </article>
@@ -512,7 +578,9 @@ footer{
 
   <div class="cards">
     <article class="card">
-      <div class="media"><img src="https://plus.unsplash.com/premium_photo-1672759362274-bb02b3645cb8?auto=format&fit=crop&w=1857&q=80" alt="Creative Launch"></div>
+      <div class="media">
+        <img loading="lazy" src="https://plus.unsplash.com/premium_photo-1672759362274-bb02b3645cb8?auto=format&fit=crop&w=1857&q=80" alt="Creative Launch">
+      </div>
       <div class="body">
         <div class="title-sub">Creative Launch</div>
         <div class="kicker">
@@ -522,7 +590,9 @@ footer{
     </article>
 
     <article class="card">
-      <div class="media"><img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?auto=format&fit=crop&w=1400&q=80" alt="Digital Growth"></div>
+      <div class="media">
+        <img loading="lazy" src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?auto=format&fit=crop&w=1400&q=80" alt="Digital Growth">
+      </div>
       <div class="body">
         <div class="title-sub">Digital Growth</div>
         <div class="kicker">
@@ -532,7 +602,9 @@ footer{
     </article>
 
     <article class="card">
-      <div class="media"><img src="https://images.unsplash.com/photo-1563674881-8abcee2b556a?auto=format&fit=crop&w=1740&q=80" alt="Visual Legacy"></div>
+      <div class="media">
+        <img loading="lazy" src="https://images.unsplash.com/photo-1563674881-8abcee2b556a?auto=format&fit=crop&w=1740&q=80" alt="Visual Legacy">
+      </div>
       <div class="body">
         <div class="title-sub">Visual Legacy</div>
         <div class="kicker">
@@ -552,7 +624,9 @@ footer{
 
   <div class="cards">
     <article class="card">
-      <div class="media"><img src="https://plus.unsplash.com/premium_photo-1683133556035-403d392ef900?auto=format&fit=crop&w=1740&q=80" alt="Personalised"></div>
+      <div class="media">
+        <img loading="lazy" src="https://plus.unsplash.com/premium_photo-1683133556035-403d392ef900?auto=format&fit=crop&w=1740&q=80" alt="Personalised">
+      </div>
       <div class="body">
         <div class="title-sub">Personalised</div>
         <div class="kicker">
@@ -562,7 +636,9 @@ footer{
     </article>
 
     <article class="card">
-      <div class="media"><img src="https://images.unsplash.com/photo-1542744095-291d1f67b221?auto=format&fit=crop&w=1400&q=80" alt="Curated"></div>
+      <div class="media">
+        <img loading="lazy" src="https://images.unsplash.com/photo-1542744095-291d1f67b221?auto=format&fit=crop&w=1400&q=80" alt="Curated">
+      </div>
       <div class="body">
         <div class="title-sub">Curated</div>
         <div class="kicker">
@@ -572,7 +648,9 @@ footer{
     </article>
 
     <article class="card">
-      <div class="media"><img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=1400&q=80" alt="Essence"></div>
+      <div class="media">
+        <img loading="lazy" src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=1400&q=80" alt="Essence">
+      </div>
       <div class="body">
         <div class="title-sub">Essence</div>
         <div class="kicker">
@@ -582,7 +660,9 @@ footer{
     </article>
 
     <article class="card">
-      <div class="media"><img src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?auto=format&fit=crop&w=1400&q=80" alt="Vyne Signature"></div>
+      <div class="media">
+        <img loading="lazy" src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?auto=format&fit=crop&w=1400&q=80" alt="Vyne Signature">
+      </div>
       <div class="body">
         <div class="title-sub">Vyne Signature</div>
         <div class="kicker">
@@ -606,7 +686,7 @@ const isMobile = window.innerWidth <= 780;
 gsap.utils.toArray(".section").forEach(section=>{
   const t = section.querySelector(".title");
   const d = section.querySelector(".desc");
-  if(!t||!d) return;
+  if(!t || !d) return;
   gsap.timeline({
     scrollTrigger:{
       trigger:section,
@@ -726,8 +806,6 @@ ham.addEventListener('keydown', e=>{
 
 /* ===========================
    3D STACKED SWIPE (MOBILE)
-   Option B — all cards visible, stack shifts left/right
-   Smooth / slower swipe using GSAP lerp
    =========================== */
 if(isMobile){
   setupStackedSwipe();
@@ -739,7 +817,7 @@ function setupStackedSwipe(){
     const cards = Array.from(container.children);
     if(cards.length <= 1) return;
 
-    // Ensure base styles for mobile stack
+    /* Ensure base styles for mobile stack */
     container.style.position = "relative";
     container.style.perspective = "1200px";
 
@@ -764,7 +842,7 @@ function setupStackedSwipe(){
         const translateX = offset * 26;        // horizontal spread
         const translateY = absOffset * 8;      // slight drop for depth
         const translateZ = -absOffset * 50;    // push back in Z
-        const rotateY   = offset * -9;        // rotate towards user
+        const rotateY   = offset * -9;         // rotate towards user
         const scale     = 1 - absOffset * 0.05;
 
         const visible = absOffset <= 3.5;
@@ -790,7 +868,7 @@ function setupStackedSwipe(){
 
     updateStack();
 
-    // Recalculate when images load (so height is correct)
+    /* Recalculate when images load (so height is correct) */
     cards.forEach(card=>{
       const img = card.querySelector("img");
       if(img){
@@ -870,6 +948,15 @@ function setupStackedSwipe(){
     container.addEventListener("touchstart", onStart, {passive:true});
     container.addEventListener("touchmove", onMove, {passive:false});
     container.addEventListener("touchend", onEnd, {passive:true});
+  });
+}
+
+/* --- iOS fallback: force repaint for gradient text on mobile --- */
+if(isMobile){
+  requestAnimationFrame(() => {
+    document.querySelectorAll('.title, .title-sub, .hero h1, .hero p, .desc').forEach(el => {
+      const _ = el.offsetHeight; // force layout/repaint
+    });
   });
 }
 </script>
