--- a/web.html
+++ b/web.html
@@ -341,6 +341,30 @@ footer{
     </a>
   </div>
 
+
+
+  <div class="work-card reveal">
+    <div class="work-img">
+      <img src="vision.png">
+    </div>
+  
+    <div class="work-title">VisionaryStudio</div>
+  
+    <div class="work-desc">
+      <ul>
+        <li>Futuristic minimalism</li>
+        <li>Signature gradient identity</li>
+        <li>Immersive interactions</li>
+      </ul>
+    </div>
+  
+    <a class="work-link" href="https://randamonium174.github.io/VisionaryStudio/" target="_blank">
+      View Website →
+    </a>
+  </div>
+  
+
+
   <div class="work-card reveal">
     <div class="work-img">
       <img src="gym.png">
