--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ footer{padding:34px;text-align:center;color:rgba(255,255,255,0.85);background:bl
 <main>
 
 <!-- HERO -->
-<section class="parallax" style="background-image:url('https://images.unsplash.com/photo-1648365899122-baf94c9bb84a?q=80&w=1740&auto=format&fit=crop&ixlib=rb-4.1.0');">
+<section class="parallax" style="background-image:url('https://images.unsplash.com/photo-1549317487-92cec5e76645?q=80&w=2114&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
   <div class="hero">
     <div class="hero-logo-wrap"><img src="studiologo.png" class="hero-logo" alt="StudioVyne logo"></div>
     <div class="welcome">Welcome to StudioVyne</div>
