--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ footer{padding:34px;text-align:center;color:rgba(255,255,255,0.85);background:bl
 <main>
 
 <!-- HERO -->
-<section class="parallax" style="background-image:url('https://images.unsplash.com/photo-1762343264418-1467f9394f49?q=80&w=2064&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
+<section class="parallax" style="background-image:url('https://images.pexels.com/photos/7095/people-coffee-notes-tea.jpg');">
   <div class="hero">
     <div class="hero-logo-wrap"><img src="studiologo.png" class="hero-logo" alt="StudioVyne logo"></div>
     <div class="welcome">Welcome to StudioVyne</div>
