--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ footer{padding:34px;text-align:center;color:rgba(255,255,255,0.85);background:bl
 <main>
 
 <!-- HERO -->
-<section class="parallax" style="background-image:url('https://images.pexels.com/photos/7095/people-coffee-notes-tea.jpg');">
+<section class="parallax" style="background-image:url('https://images.pexels.com/photos/5827829/pexels-photo-5827829.jpeg');">
   <div class="hero">
     <div class="hero-logo-wrap"><img src="studiologo.png" class="hero-logo" alt="StudioVyne logo"></div>
     <div class="welcome">Welcome to StudioVyne</div>
